cmake_minimum_required(VERSION 3.0)
#project(config_test VERSION 1.0.0)
#set(SOURCE config_test.cpp)
#set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
#add_executable(${PROJECT_NAME} ${SOURCE})


project(configtest VERSION 1.0.0)
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -std=c++11 -Wall -g")
add_executable(config_test config_test.cpp)
add_executable(lconfig3 lconfig3.cpp)
add_executable(lconfig5 lconfig5.cpp)
add_executable(lconfig6 lconfig6.cpp)
add_executable(lconfig8 lconfig8.cpp)
add_executable(lconfig10 lconfig10.cpp)
add_executable(lconfig11 lconfig11.cpp)
add_executable(tempobject lconfig-temp-object.cpp)
add_executable(lqsort lqsort.cpp)
add_executable(lfunctor lfunctor.cpp)