cmake_minimum_required(VERSION 3.0)
project(vector_test VERSION 1.0.0)

add_executable(vector_test vector_test.cpp)
add_executable(list_test list_test.cpp)
add_executable(deque_test deque_test.cpp)
add_executable(stack_test stack_test.cpp)
add_executable(queue_test queue_test.cpp)
add_executable(heap_test heap_test.cpp)
add_executable(pqueue_test pqueue_test.cpp)
add_executable(slist_test slist_test.cpp)